1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INIT_NOTICE, AC_INIT_PREPARE, AC_ARG_ENABLE,
	AC_ARG_WITH, AC, TRY_COMPILER, AC_TRY_RUN, AC_TRY_CPP,
	AC_EGREP_CPP): Use @PND@ instead of [#]: it looses the editors
	that try to match the pairs of (), [] etc.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Fix the compatibility of the compiling macros with C++.

	* acgeneral.m4 (AC_TRY_COMPILE, AC_TRY_LINK, AC_CHECK_SIZEOF): Use
	`int main () {...}', instead of `main () {...}'.
	* acspecific.m4 (AC_TYPE_GETGROUPS, AC_FUNC_CLOSEDIR_VOID,
	AC_FUNC_FNMATCH, AC_FUNC_GETPGRP, AC_FUNC_SETPGRP, AC_FUNC_VFORK,
	AC_FUNC_WAIT3, AC_FUNC_ALLOCA, AC_FUNC_UTIME_NULL,
	AC_FUNC_SETVBUF_REVERSED, AC_FUNC_MEMCMP, AC_C_CHAR_UNSIGNED,
	AC_C_LONG_DOUBLE, AC_C_BIGENDIAN, AC_SYS_RESTARTABLE_SYSCALLS):
	Likewise.
	* acspecific.m4 (AC_FUNC_FNMATCH): Call
	AC_CHECK_HEADERS(fnmatch.h), and include fnmatch.h in the compiled
	code.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_COMPILE_CHECK, AC_TRY_COMPILE,
 	AC_TRY_RUN_NATIVE, AC_OUTPUT_CONFIG_STATUS): Use @PND@ instead of
 	[#]: it looses the editors that try to match the pairs of (), []
 	etc.
	Formatting changes.
	* acspecific.m4: Formatting changes.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Allow standard beta version numbers.

	* configure.in: Declare version 2.14a.
	* acgeneral.m4 (AC_UNGNITS): New macro which transform version
	numbers to pure digits (2.14a to 2.14.0.1, 2.15z to 2.15.0.26
	etc.).
	(AC_PREREQ): Normalize argument and AC_ACVERSION via AC_UNGNITS.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Fix the --version of all the executables.

	* Makefile.am (editsh, editpl): Substitute also PACKAGE and
	VERSION.
	* autoconf.sh (version): New string.
	(--version): Use it.
	(--help) Output on stdout, not stderr.
	* autoheader.sh: Likewise.
	* autoreconf.sh: Likewise.
	* autoscan.pl: Likewise.
	* autoupdate.sh: Likewise.
	* ifnames.sh: Likewise.

1999-10-31  Akim Demaille  <akim@epita.fr>
